# quack

./: pyproject.toml
AI/: varlen_blockscaled_sf_layout.md
benchmarks/: benchmark_gemm.py
docs/: sm120_blockscaled_perf.md
quack/: blockscaled_gemm_utils.py  gemm_sm120.py
tests/: test_gemm_blockscaled.py
