[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "quack-kernels"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "nvidia-cutlass-dsl>=4.4.2",
    "torch",
    "apache-tvm-ffi>=0.1.6,<0.2",
    "torch-c-dlpack-ext",
    "einops",
]

[project.optional-dependencies]
cu13 = ["nvidia-cutlass-dsl[cu13]>=4.4.2"]
heuristics = ["nvidia-matmul-heuristics"]
dev = [
    "pre-commit",
    "pytest",
    "pytest-xdist",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["quack*"]

[tool.setuptools.dynamic]
version = {attr = "quack.__version__"}

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "extra == 'cu13'" },
]

[tool.ruff]
line-length = 100
exclude = [".#*"]

[tool.ruff.lint]
ignore = [
    "E731",  # do not assign a lambda expression, use a def
    "E741",  # Do not use variables named 'I', 'O', or 'l'
    "F841",  # local variable is assigned to but never used
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
